2008-08-07 18:23-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/AppKit/NSTokenFieldCell.h
	* Headers/AppKit/NSTokenField.h: Headers for new class.
	* Source/GNUmakefile
	* Source/NSDocumentController.m: Added code to handle the
	CF keys as well as the NS keys for document oriented apps.
	* Source/NSTokenFieldCell.m
	* Source/NSTokenField.m: Start of implementation for this class.

2008-08-02 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSScrollView.m (-initWithCoder:): Handle non-retained
	ivars correctly.
	* Source/NSWindowController.m (-loadWindow): Release the loaded
	window once, as it got retained by the NIB loading mechanism.	

2008-07-13 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSGlyphGenerator.m (-generateGlyphsForGlyphStorage:...):
	Add fallback glyph when no glyph can be found for current character.

2008-07-13 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSLayoutManager.m: Protect all access to the glyph arrays. 

2008-07-12 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSLayoutManager.m (-_glyphForCharacter:index:positions::), 
	* Source/NSGlyphGenerator.m (-generateGlyphsForGlyphStorage:...):
	Add some more protection against inconsistent state.

2008-07-12 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSSavePanel.m (-ok:): Standardize path before checking
	for existance.

2008-07-08 16:15-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSMenu.m: Beginning of support for windows style menus on the
	top of the window.
	* Source/NSWindow.m: Added code in the method -setFrameFromString: to 
	make certain the window doesn't go out of bounds if the screen size
	changes.

2008-07-02 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSPopUpButton.h,
	* Source/NSPopUpButton.m (-selectItemWithTag:): Add MacOS 10.4
	method.

2008-06-17 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSClipView.m (_scrollToPoint:): New method for adjusted
	scrolling. 
	* Source/NSScrollView.m: Use this new method.